Finished fixing formatting and spacing issues

--- a/res/css/home-page-style.css
+++ b/res/css/home-page-style.css
@@ -2,8 +2,9 @@ body{
     background-color: azure;
 }
 
-.logo{
-    margin-left: 4px;
+#logo{
+    margin-left: 2px;
+    margin-top: 2px;
 }
 
 #logo-icon{
@@ -46,13 +47,13 @@ body{
     }
 }
 
-.background-image {
+#background-image {
     position: relative;
     width: 100vw;
     height: 100vw;
 }
 
-.team-overlay {
+#team-overlay {
     position: absolute;
     top:50%;
     left: 50%;
@@ -78,3 +79,15 @@ body{
 #meet-team {
     font-size: 3pc;
 }
+
+#meet-team-div {
+
+    padding: 5px;
+    display: inline-block;
+}
+
+#team-row {
+    max-width: 80vw;
+    max-height: auto;
+}
+
